--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Game" />
+        <activity android:name=".Terms_of_Use"></activity>
     </application>
 
 </manifest>
