--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         </activity>
         <activity android:name=".Game" />
         <activity android:name=".Terms_of_Use"></activity>
+        <service
+            android:name=".reminderService"
+            android:exported="false"/>
     </application>
 
 </manifest>
